HW63/manifest/depl11.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: depl1
  name: depl1-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: depl1
  template:
    metadata:
      labels:
        app: depl1
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: depl1-html-vol
          mountPath: /usr/share/nginx/html
      - name: multitool
        image: wbitt/network-multitool:latest
        ports:
        - containerPort: 8080
      volumes:
      - name: depl1-html-vol
        configMap:
          name: depl1-cgfmap-html

---
apiVersion: v1
kind: Service
metadata:
  name: depl1-svc
spec:
  selector:
    app: depl1
  ports:
  - name: depl1-nginx-svc-port
    port: 80
    targetPort: 80
