HW63/manifest/depl2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: depl2
  name: depl2-depl
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: depl2
  template:
    metadata:
      labels:
        app: depl2
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: depl2-html-vol
          mountPath: /usr/share/nginx/html

      volumes:
      - name: depl2-html-vol
        configMap:
          name: depl2-cgfmap-html

---
apiVersion: v1
kind: Service
metadata:
  name: depl2-svc
spec:
  selector:
    app: depl2
  ports:
  - name: depl2-svc-http-port
    port: 80
    targetPort: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: depl2-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ubuntu-001.dgt.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: depl2-svc
            port:
              number: 80
  tls:
  - hosts:
    - ubuntu-001.dgt.local
    secretName: depl2-secret-tls
